Denis_Doubinin/13.k8s/first_man.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: proxy-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy-web
  template:
    metadata:
      labels:
        app: proxy-web
    spec:
      containers:
      - name: nginx
        image: linuxserver/nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - name: config
          mountPath: "/etc/nginx"
        - name: website
          mountPath: "/usr/share/nginx/html"     
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: conf-pv-claim
      - name: website
        persistentVolumeClaim:
          claimName: web-pv-claim
---
apiVersion: v1
kind: Service
metadata:        
  name: proxy-web-service
  labels:
    run: proxy-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: proxy-web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-site
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: nginx.k8s-5.sa
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy-web-service
          servicePort: 80
