Denis_Doubinin/13.k8s/sonarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: son
spec:
  replicas: 1
  selector:
    matchLabels:
      app: son
  template:
    metadata:
      labels:
        app: son
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr
        ports:
        - containerPort: 8989
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-web-service
  labels:
    run: sonarr-web-service
spec:
  type: LoadBalancer
  ports:
  - port: 8989
    protocol: TCP
  selector:
    app: son
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:        
  name: ingress-sonarr
spec:
  rules:
  - host: sonarr.k8s-5.sa
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sonarr-web-service
            port:
              number: 8989
